<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Nome"
            android:id="@+id/textViewCodigo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=" - "
            android:id="@+id/textViewTracoCodigo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Nome"
            android:id="@+id/textViewNome" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <!-- Descricao -->

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Descricao" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=" - " />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Descricao"
            android:id="@+id/textViewDescricao" />

    </androidx.appcompat.widget.LinearLayoutCompat>



    <!-- Valor -->

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Valor" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=" : " />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=" R$" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Valor"
            android:id="@+id/textViewValor" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <!-- Botoes -->

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="34dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCompartilhar"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:background="@android:color/transparent"
            android:text="@string/Compartilhar"
            android:textColor="#633B16" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonExcluir"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/buttonEditar"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="53dp"
            android:layout_marginRight="53dp"
            android:layout_marginBottom="0dp"
            android:layout_toStartOf="@+id/buttonEditar"
            android:layout_toLeftOf="@+id/buttonEditar"
            android:background="@android:color/transparent"
            android:text="@string/Excluir"
            android:textColor="#633B16" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonEditar"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="-1dp"
            android:layout_marginEnd="151dp"
            android:layout_marginRight="151dp"
            android:background="@android:color/transparent"
            android:text="@string/Editar"
            android:textColor="#633B16" />


    </RelativeLayout>


</androidx.appcompat.widget.LinearLayoutCompat>